bin_PROGRAMS = mindyc

mindyc_CFLAGS = -DBINDIR=\"@bindir@\" -DLIBDIR=\"@libdir@\" -DTARGET=\"@target@\" -DVERSION=\"@VERSION@\"
mindyc_YFLAGS = -d
mindyc_SOURCES = compile.c \
	dump.c \
	dup.c \
	envanal.c \
	expand.c \
	parser.y \
	lexer.l \
	feature.c \
	free.c \
	header.c \
	info.c \
	lexenv.c \
	literal.c \
	lose.c \
	mindycomp.c \
	print.c \
	src.c \
	sym.c \
	version.c
